# UnThink

./: Dockerfile  compose.yaml  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.strict.json  vite.config.ts
.github/workflows/: strict-types.yml
docs/: performance-budgets.md  self-hosted-sync.md  storage-format-v1.md  todofix.md
e2e/: web-platform.spec.ts
public/: manifest.webmanifest  sw.js
server/: README.md  go.mod  go.sum
server/api/: encoding.go  server.go  server_test.go
server/cmd/tasks-server/: main.go
server/database/: admin.go  store.go  store_test.go
server/database/migrations/: 001_initial.sql
src/: main.desktop.tsx  main.mobile.tsx  main.tsx  testIds.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/apple/: project.yml
src-tauri/apple/Intents/: OpenUnthinkIntent.swift
src-tauri/apple/Shared/: UnthinkDestination.swift
src-tauri/apple/Widget/: UnthinkWidget.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/cli/components/: DbListView.tsx  TaskTable.tsx
src/cli/core/: databases.ts  (+2 more)
src/core/: model.test.ts  model.ts  type.ts  utils.ts
src/desktop/: app.tsx  main.tsx
src/locales/: en-US.json  zh-CN.json
src/mobile/: App.tsx  main.tsx  pages.tsx  theme.ts
tooling/: README.md  check-bundle-size.ts  generate-env.ts  performance-benchmark.ts  validate-native-integrations.mjs  validate-native-integrations.ts
tooling/vite-plugin-detect-unused-files/: detect-unused-files.ts
(+237 files in other folders)
